Reformatted, separated into different classes